exports[`test console printing 1`] = `
" PASS  __tests__/console-test.js
  ● Console

    console.log __tests__/console-test.js:11
      This is a log message.
    console.info __tests__/console-test.js:13
      This is an info message.
    console.warn __tests__/console-test.js:15
      This is a warning message.
    console.error __tests__/console-test.js:17
      This is a error message.

 PASS  __tests__/console2-test.js
  ● Console

    console.error __tests__/console2-test.js:18
      This is an error from another test file.
"
`;

exports[`test console printing with --verbose 1`] = `
"  console.log __tests__/console-test.js:11
    This is a log message.

  console.info __tests__/console-test.js:13
    This is an info message.

  console.warn __tests__/console-test.js:15
    This is a warning message.

  console.error __tests__/console-test.js:17
    This is a error message.

  console.error __tests__/console2-test.js:18
    This is an error from another test file.

"
`;
